# weight_lifting_calculator

./: .gitignore  LICENSE  Pipfile  README.md  main.py  pyproject.toml  tui.py  tui.tcss  weight_lifting_calculator.py
tests/: test_wlc.py
wlc/: wlc.py
